<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo">Operaciones</string>
    <string name="resultado">Résultado</string>
    <string name="primer_numero">Primer Número</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="Mensaje_error_uno">Digite Numero uno</string>
    <string name="Mensaje_error_dos">Digite NUmero dos</string>
    <string name="Operaciones">operaciones</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="division">Division</string>
    <string-array name="operacionescal">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>

    </string-array>
    <string name="Mensaje_error_tres">No puede divir entre 0</string>
</resources>
